tests/negative/230/Prod.juvix
module Prod;

import Stdlib.Prelude open;
import Foo open;
import Foo.Data.Bool;

fi : Foo.Data.Bool := Foo.Data.Bool.false;

end;
